@@ -9,72 +9,96 @@ import harustudy.backend.progress.dto.ParticipateStudyRequest;
 import harustudy.backend.progress.dto.PomodoroProgressResponse;
 import harustudy.backend.progress.dto.PomodoroProgressesResponse;
 import harustudy.backend.progress.exception.PomodoroProgressNotFoundException;
-import harustudy.backend.progress.exception.ProgressNotBelongToRoomException;
+import harustudy.backend.progress.exception.ProgressNotBelongToStudyException;
 import harustudy.backend.progress.repository.PomodoroProgressRepository;
-import harustudy.backend.room.domain.PomodoroRoom;
-import harustudy.backend.room.repository.PomodoroRoomRepository;
+import harustudy.backend.study.domain.PomodoroStudy;
+import harustudy.backend.study.repository.PomodoroStudyRepository;
 import jakarta.annotation.Nullable;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-@Service
 @RequiredArgsConstructor
 @Transactional
+@Service
 public class PomodoroProgressService {
 
     private final MemberRepository memberRepository;
     private final PomodoroProgressRepository pomodoroProgressRepository;
-    private final PomodoroRoomRepository pomodoroRoomRepository;
+    private final PomodoroStudyRepository pomodoroStudyRepository;
 
+    @Transactional(readOnly = true)
     public PomodoroProgressResponse findPomodoroProgress(
             AuthMember authMember, Long studyId, Long progressId
     ) {
-        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
+        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
         PomodoroProgress pomodoroProgress = pomodoroProgressRepository.findByIdIfExists(progressId);
-        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroRoom);
+        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroStudy);
         return PomodoroProgressResponse.from(pomodoroProgress);
     }
 
-    // TODO: 동적쿼리로 변경(memberId 유무에 따른 분기처리)
-    public PomodoroProgressesResponse findPomodoroProgressWithFilter(
-            AuthMember authMember, Long studyId, @Nullable Long memberId
+    // TODO: 임시용이므로 이후에 제거
+    public PomodoroProgressesResponse tempFindPomodoroProgressWithFilter(
+            AuthMember authMember, Long studyId, Long memberId
     ) {
-        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
+        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
         if (Objects.isNull(memberId)) {
-            validateEverParticipated(authMember, pomodoroRoom);
-            return getPomodoroProgressesResponseWithoutMemberFilter(pomodoroRoom);
+            validateEverParticipated(authMember, pomodoroStudy);
+            return getPomodoroProgressesResponseWithoutMemberFilter(pomodoroStudy);
         }
         Member member = memberRepository.findByIdIfExists(memberId);
         validateIsSameMemberId(authMember, memberId);
-        return getPomodoroProgressesResponseWithMemberFilter(pomodoroRoom, member);
+        return tempGetPomodoroProgressesResponseWithMemberFilter(pomodoroStudy, member);
     }
 
-    private void validateEverParticipated(AuthMember authMember, PomodoroRoom pomodoroRoom) {
+    // TODO: 임시용이므로 이후에 제거
+    private PomodoroProgressesResponse tempGetPomodoroProgressesResponseWithMemberFilter(
+            PomodoroStudy pomodoroStudy, Member member) {
+        return pomodoroProgressRepository.findByPomodoroStudyAndMember(pomodoroStudy, member)
+                .map(PomodoroProgressResponse::from)
+                .map(response -> PomodoroProgressesResponse.from(List.of(response)))
+                .orElseGet(() -> PomodoroProgressesResponse.from(null));
+    }
+
+    // TODO: 동적쿼리로 변경(memberId 유무에 따른 분기처리)
+    @Transactional(readOnly = true)
+    public PomodoroProgressesResponse findPomodoroProgressWithFilter(
+            AuthMember authMember, Long studyId, @Nullable Long memberId
+    ) {
+        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
+        if (Objects.isNull(memberId)) {
+            validateEverParticipated(authMember, pomodoroStudy);
+            return getPomodoroProgressesResponseWithoutMemberFilter(pomodoroStudy);
+        }
+        Member member = memberRepository.findByIdIfExists(memberId);
+        validateIsSameMemberId(authMember, memberId);
+        return getPomodoroProgressesResponseWithMemberFilter(pomodoroStudy, member);
+    }
+
+    private void validateEverParticipated(AuthMember authMember, PomodoroStudy pomodoroStudy) {
         Member member = memberRepository.findByIdIfExists(authMember.id());
-        pomodoroProgressRepository.findByPomodoroRoomAndMember(pomodoroRoom, member)
+        pomodoroProgressRepository.findByPomodoroStudyAndMember(pomodoroStudy, member)
                 .orElseThrow(AuthorizationException::new);
     }
 
     private PomodoroProgressesResponse getPomodoroProgressesResponseWithoutMemberFilter(
-            PomodoroRoom pomodoroRoom
+            PomodoroStudy pomodoroStudy
     ) {
         List<PomodoroProgressResponse> responses =
-                pomodoroProgressRepository.findByPomodoroRoom(pomodoroRoom)
+                pomodoroProgressRepository.findByPomodoroStudy(pomodoroStudy)
                         .stream()
                         .map(PomodoroProgressResponse::from)
-                        .collect(Collectors.toList());
+                        .toList();
         return PomodoroProgressesResponse.from(responses);
     }
 
     private PomodoroProgressesResponse getPomodoroProgressesResponseWithMemberFilter(
-            PomodoroRoom pomodoroRoom, Member member
+            PomodoroStudy pomodoroStudy, Member member
     ) {
         PomodoroProgressResponse response =
-                pomodoroProgressRepository.findByPomodoroRoomAndMember(pomodoroRoom, member)
+                pomodoroProgressRepository.findByPomodoroStudyAndMember(pomodoroStudy, member)
                         .map(PomodoroProgressResponse::from)
                         .orElseThrow(PomodoroProgressNotFoundException::new);
         return PomodoroProgressesResponse.from(List.of(response));
@@ -82,18 +106,19 @@ public class PomodoroProgressService {
 
     public void proceed(AuthMember authMember, Long studyId, Long progressId) {
         PomodoroProgress pomodoroProgress = pomodoroProgressRepository.findByIdIfExists(progressId);
-        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
+        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
 
-        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroRoom);
+        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroStudy);
         pomodoroProgress.proceed();
     }
 
-    public Long participateStudy(AuthMember authMember, Long studyId, ParticipateStudyRequest request) {
+    public Long participateStudy(AuthMember authMember, Long studyId,
+            ParticipateStudyRequest request) {
         Member member = memberRepository.findByIdIfExists(request.memberId());
         validateIsSameMemberId(authMember, request.memberId());
-        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
-        PomodoroProgress pomodoroProgress = new PomodoroProgress(pomodoroRoom, member, request.nickname());
-        pomodoroProgress.generateContents(pomodoroRoom.getTotalCycle());
+        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
+        PomodoroProgress pomodoroProgress = new PomodoroProgress(pomodoroStudy, member, request.nickname());
+        pomodoroProgress.generateContents(pomodoroStudy.getTotalCycle());
         PomodoroProgress saved = pomodoroProgressRepository.save(pomodoroProgress);
         return saved.getId();
     }
@@ -105,10 +130,10 @@ public class PomodoroProgressService {
     }
 
     private void validateProgressIsRelatedWith(
-            PomodoroProgress pomodoroProgress, AuthMember authMember, PomodoroRoom pomodoroRoom
+            PomodoroProgress pomodoroProgress, AuthMember authMember, PomodoroStudy pomodoroStudy
     ) {
         validateMemberOwns(pomodoroProgress, authMember);
-        validateProgressIsIncludedIn(pomodoroRoom, pomodoroProgress);
+        validateProgressIsIncludedIn(pomodoroStudy, pomodoroProgress);
     }
 
     private void validateMemberOwns(PomodoroProgress pomodoroProgress, AuthMember authMember) {
@@ -118,18 +143,18 @@ public class PomodoroProgressService {
         }
     }
 
-    private void validateProgressIsIncludedIn(PomodoroRoom pomodoroRoom,
+    private void validateProgressIsIncludedIn(PomodoroStudy pomodoroStudy,
             PomodoroProgress pomodoroProgress) {
-        if (pomodoroProgress.isNotIncludedIn(pomodoroRoom)) {
-            throw new ProgressNotBelongToRoomException();
+        if (pomodoroProgress.isNotIncludedIn(pomodoroStudy)) {
+            throw new ProgressNotBelongToStudyException();
         }
     }
 
     public void deleteProgress(AuthMember authMember, Long studyId, Long progressId) {
-        PomodoroRoom pomodoroRoom = pomodoroRoomRepository.findByIdIfExists(studyId);
-        validateEverParticipated(authMember, pomodoroRoom);
+        PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
+        validateEverParticipated(authMember, pomodoroStudy);
         PomodoroProgress pomodoroProgress = pomodoroProgressRepository.findByIdIfExists(progressId);
-        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroRoom);
+        validateProgressIsRelatedWith(pomodoroProgress, authMember, pomodoroStudy);
         pomodoroProgressRepository.delete(pomodoroProgress);
     }
 }
